PrimeroEdge.SharedUtilities/PrimeroEdge.SharedUtilities.Api/sharedutilities/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharedutilities
  labels:
    app: sharedutilities
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: sharedutilities
